--- a/faq.html
+++ b/faq.html
@@ -18,10 +18,10 @@
   <body>
     <p>
         age
-        18
+        19
 
         how tall are you (private)
-        5'11 (180cm) 
+        5'10 
 
         how do you pronounce your name the actual way      
         <a href = "https://www.youtube.com/watch?v=kAK48WodDlY&ab_channel=Sanskrit-PronunciationofSanskritWords">like this</a>
@@ -33,7 +33,7 @@
         indian
 
         what do you study
-        cs at wilfrid laurier university
+        1st year cs at wilfrid laurier university
 
         what languages do you speak
         i can understand hindi. i know a little bit of french and chinese
@@ -48,7 +48,7 @@
         straight
 
         hobbies
-        reading, biking, plotagon, philosophy, psychology, running, programming
+        reading, biking, plotagon, philosophy, psychology, running, programming, chinese, anime, gaming, lolesports, psychedelics, politics, religion
 
         mbti
         entj
@@ -57,7 +57,7 @@
         sagittarius
 
         here is my dog, with an evil expression on her face:
-        <img src = "https://scontent.cdninstagram.com/v/t51.39111-15/291978762_701217211045204_5574748804980443302_n.jpg?stp=dst-jpg_p526x296&_nc_cat=102&ccb=1-7&_nc_sid=5a057b&_nc_ohc=q0lh9d58KM8AX9w70vy&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_ARqguwTiVVkj6waXsCkVSL1LxwCYXEfNacHyBpzVbPYgAw&oe=62D47728"/>
+        <img src = "https://lh3.googleusercontent.com/fFFJ5uA_TkOuDA1qg0Vhtp4YstavGuiXR6xppVEuP_hQuNwu-V29kkXl7q5BmfHnrvYBDz8vPvrDzATd7SOJG7d4n3qLrQ7aVmSow7ejm1IA2-sl6CZuyM5p4UiT7GUviQpe_RRvVm8OMpU_YxTSoeVOxhEA-bqd3arnx0Wm-0UsgihiginvnI6irfM0JG5KgaXE0hRrs1TS8otWnDaMdtzMYVndmadu4s7X1_U12Y4Rfz_LU3rEdWFRZxYJpTUw_ikIxoe3-5GX_Rw6rsn6sGPMrilw-LsxTvEBcjddBQp4tZL2-Y8O383Hc73nLo6VPUW1O8qZwpA5mHS_K6LPGoHsiZTu2ewt__pImcVCAo1DAxkZURewe074YjLLmshaDKWb4-6Zkw5axtpxK6qn_CUVLc_HlCyChAwtK-JdS9vEmmFGkriZMk2coA1Kxwp_dBD81uCXYP_xnDbV1vcGvsgOBUPY7PX25AD_33Twt9E4Gi5IbyqVerNvfWzIJLLRkt__3GUoLbWP_UypoxtwmSCjNZkk2In9b8FEh0oy7XNHjLXg8hLdI0sZetpG3aSTvnJTqQ16eq57Q2POpVwcKjayifVfQ_IBkLiZFZNF3OGXOjIQoRjT7BOSCmcs6KJNh8cOGpUjknCLu2-pWEhR918WBLVW8CTWgBmQhmKpgSgVWHN-e-0xW07F7PR57Z1fupfbJATBinC62dRoW4ve7tj2zYtssCFy6EWiuBfjratr-CHYV0tZfxcRZGfwJOcqETifrh86Q5ecG07TqaSHAX9wT5QhPZv46D4rXG0BrqB5UXxn-1HqjQ30RJQhvUMjPYn8wQxxGxakkBxIFQS8XTWXy_dvzWFCIZEQxmdv20-hw46pKs2d9GBOAnVYKWKeiHDb0Cl5xOK8UszMLyjmS4H-QGpjy_YaYch8dgbKg9js=w427-h950-no?authuser=0"/>
     </p>
   </body>
 </html>
